[tool.poetry]
name = "facile"
homepage = "https://github.com/xoolive/facile"
version = "1.6"
description = "Python constraint programming library"
authors = ["Xavier Olive <git@xoolive.org>"]
license = "LGPL 3.0"
readme = "readme.md"
#packages = [{ include = "facile", from = "python/" }]
include = [
    { path = "facile/**/*.so", format = "wheel" },
    { path = "facile/**/*.pyd", format = "wheel" },
]
build = "build.py"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.13.0"
numpy = ">=2.3.4"
pytest = ">=8.3.3"
ruff = "^0.14.3"

[build-system]
requires = ["poetry-core>=1.0.0", "cython>=3.0", "setuptools>=62.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 80
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "RUF"]

[tool.mypy]
python_version = "3.11"
platform = "posix"

color_output = true
pretty = true
show_column_numbers = true
strict = true
check_untyped_defs = true
ignore_missing_imports = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
